# personal_arXiv_newsletter

./: .gitignore  CACHING.md  DEVELOPMENT.md  HOW_IT_WORKS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.example.yaml  example.py  pyproject.toml  setup.sh
arxiv_newsletter/: __init__.py  cache.py  cli.py  config.py  fetcher.py  filter.py  generator.py  latex_generator.py
tests/: README.md  __init__.py  test_config.py
